# c_string_buffer

./: CHANGELOG.md  CMakeLists.txt  README.md  build.sh  rebuild.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: example.c
include/: string_buffer.h  stringbuffer.h
src/: string_buffer.c  stringbuffer.c
tests/: string_buffer_test.c  test.c  test.h  test_append_binary_partial.c  test_append_bool.c  test_append_bool_null_buffer.c  test_append_double.c  test_append_float.c  test_append_int.c  test_append_int_negative.c  test_append_int_null_buffer.c  test_append_long.c  test_append_long_double.c  test_append_long_long.c  test_append_long_long_null_buffer.c  test_append_long_null_buffer.c  test_append_no_resize.c  test_append_null_buffer.c  test_append_short.c  test_append_short_null_buffer.c  test_append_string_no_resize.c  test_append_string_null_buffer.c  test_append_string_null_string.c  test_append_string_stress.c  test_append_string_with_options_length_too_big.c  test_append_string_with_options_offset_too_big.c  test_append_string_with_options_partial.c  test_append_string_with_single_resize.c  test_append_string_without_resize.c  test_append_unsigned_int.c  test_append_unsigned_long.c  test_append_unsigned_long_long.c  test_append_unsigned_short.c  test_append_with_multiple_resize.c  test_append_with_single_resize.c  test_append_without_resize.c  test_complex_flow.c  test_ensure_capacity_bigger.c  test_ensure_capacity_no_resize_bigger.c  test_ensure_capacity_no_resize_same.c  (+10 more)
